@@ -6,14 +6,13 @@ import megalodonte.State;
 import megalodonte.base.UI;
 import megalodonte.base.async.Async;
 import megalodonte.router.v4.ScreenContext;
-import my_app.db.dto.VendaDto;
 import my_app.db.models.ClienteModel;
 import my_app.db.models.ProdutoModel;
 import my_app.db.models.VendaModel;
-import my_app.db.repositories.ClienteRepository;
-import my_app.db.repositories.ContasAReceberRepository;
-import my_app.db.repositories.ProdutoRepository;
-import my_app.db.repositories.VendaRepository;
+import my_app.db.services.ClienteService;
+import my_app.db.services.ContaAreceberService;
+import my_app.db.services.ProdutoService;
+import my_app.db.services.VendaService;
 import my_app.domain.Data;
 import my_app.domain.Parcela;
 import my_app.domain.states.TotaisState;
@@ -21,8 +20,6 @@ import my_app.events.DadosFinanceirosAtualizadosEvent;
 import my_app.events.EventBus;
 import my_app.lifecycle.viewmodel.component.ViewModelScreenContract;
 import my_app.domain.components.Components;
-import my_app.services.ContasAReceberService;
-import my_app.services.VendaMercadoriaService;
 import my_app.utils.DateUtils;
 import my_app.utils.Utils;
 
@@ -32,15 +29,13 @@ import java.time.LocalDate;
 import java.util.List;
 
 public class VendaMercadoriaScreenViewModel extends ViewModelScreenContract {
-    private final VendaRepository vendaRepository;
-    private final ProdutoRepository produtoRepository;
-    private final ClienteRepository clienteRepository;
-    private final VendaMercadoriaService vendaService;
+    private final VendaService vendaService;
+    private final ProdutoService produtoService;
+    private final ClienteService clienteService;
+    private final ContaAreceberService contaService;
 
-    // --- Lista principal ---
     final ListState<VendaModel> vendas = ListState.ofEmpty();
 
-    // --- Form states ---
     final State<LocalDate> dataVenda = State.of(LocalDate.now());
     final State<String> numeroNota = State.of("");
 
@@ -56,28 +51,20 @@ public class VendaMercadoriaScreenViewModel extends ViewModelScreenContract {
     final State<String> descontoEmDinheiro = State.of("0");
     final State<String> pcVenda = State.of("0");
 
-
-
-
     final State<LocalDate> dataValidade = State.of(null);
 
-    // --- Clientes ---
     final ListState<ClienteModel> clientes = ListState.ofEmpty();
     final State<ClienteModel> clienteSelected = State.of(null);
 
-    // --- Seleção na tabela ---
     final State<VendaModel> vendaSelected = State.of(null);
 
-    // --- Controle de estoque ---
     final List<String> opcoesEstoque = List.of("Sim", "Não");
     final State<String> opcaoEstoqueSelected = State.of(opcoesEstoque.get(0));
     final State<String> estoqueAnterior = State.of("0");
     final State<String> estoqueAtual = State.of("0");
 
-
-    // --- Produtos ---
-    private final ListState<ProdutoModel> produtoModelListState = megalodonte.v2.ListState.ofEmpty();
-    final ListState<ProdutoModel> sugestoesProduto = megalodonte.v2.ListState.ofEmpty();
+    private final ListState<ProdutoModel> produtoModelListState = ListState.ofEmpty();
+    final ListState<ProdutoModel> sugestoesProduto = ListState.ofEmpty();
     final State<ProdutoModel> produtoEncontrado = State.of(null);
     final State<String> codigo = State.of("");
 
@@ -90,10 +77,15 @@ public class VendaMercadoriaScreenViewModel extends ViewModelScreenContract {
 
     public VendaMercadoriaScreenViewModel(ScreenContext ctx) {
         super(ctx);
-        this.produtoRepository = new ProdutoRepository();
-        this.vendaRepository = new VendaRepository();
-        this.clienteRepository = new ClienteRepository();
-        this.vendaService = new VendaMercadoriaService(vendaRepository, produtoRepository);
+        try {
+            this.vendaService = new VendaService();
+            this.produtoService = new ProdutoService();
+            this.clienteService = new ClienteService();
+            this.contaService = new ContaAreceberService();
+        } catch (SQLException e) {
+            UI.runOnUi(() -> Components.ShowAlertError(e.getMessage()));
+            throw new RuntimeException(e);
+        }
         this.onInit();
     }
 
@@ -101,12 +93,9 @@ public class VendaMercadoriaScreenViewModel extends ViewModelScreenContract {
     protected void onInit() {
         qtd.subscribe(v -> atualizarEstoqueVisual());
         opcaoEstoqueSelected.subscribe(v -> atualizarEstoqueVisual());
-        codigo.subscribe(termo -> filtrarProdutos(termo)); // filtra ao digitar
+        codigo.subscribe(termo -> filtrarProdutos(termo));
 
         produtoEncontrado.subscribe(this::selecionarProduto);
-
-        //TODO: SUBSCREVER A EVENTOS DE PRODUTO
-        // EventBus.getInstance().subscribe();
     }
 
     void filtrarProdutos(String termo) {
@@ -115,24 +104,23 @@ public class VendaMercadoriaScreenViewModel extends ViewModelScreenContract {
             return;
         }
 
-        // Limpa seleção antes de trocar a lista
         produtoEncontrado.set(null);
 
         var filtrados = produtoModelListState.get().stream()
-                .filter(p -> p.codigoBarras.contains(termo.trim())
-                        || p.descricao.toLowerCase().contains(termo.trim().toLowerCase()))
-                .limit(8) // evita lista enorme
+                .filter(p -> p.getCodigoBarras().contains(termo.trim())
+                        || p.getDescricao().toLowerCase().contains(termo.trim().toLowerCase()))
+                .limit(8)
                 .toList();
 
         sugestoesProduto.set(filtrados);
     }
 
     void selecionarProduto(ProdutoModel produto) {
-        if(produto!=null){
-            codigo.set(produto.codigoBarras);
-            pcVenda.set(Utils.deRealParaCentavos(produto.precoVenda));
-            estoqueAnterior.set(produto.estoque.toString());
-            sugestoesProduto.clear(); // fecha a lista após seleção
+        if (produto != null) {
+            codigo.set(produto.getCodigoBarras());
+            pcVenda.set(Utils.deRealParaCentavos(produto.getPrecoVenda()));
+            estoqueAnterior.set(produto.getEstoque().toString());
+            sugestoesProduto.clear();
         }
     }
 
@@ -142,24 +130,23 @@ public class VendaMercadoriaScreenViewModel extends ViewModelScreenContract {
         if (data == null) return;
 
         modoEdicao.set(false);
-        dataVenda.set(DateUtils.millisParaLocalDate(data.dataVenda));
-        numeroNota.set(data.numeroNota);
-        codigo.set(data.produtoCod);
+        dataVenda.set(DateUtils.millisParaLocalDate(data.getDataVenda()));
+        numeroNota.set(data.getNumeroNota());
+        codigo.set(data.getProdutoCod());
         produtoEncontrado.set(null);
-        //estoqueAtual.set(data.q)
-        qtd.set(Utils.quantidadeTratada(data.quantidade));
-        observacao.set(data.observacao);
-        tipoPagamentoSelecionado.set(data.tipoPagamento);
-        pcVenda.set(Utils.deRealParaCentavos(data.precoUnitario));
-        dataValidade.set(data.dataValidade != null
-                ? DateUtils.millisParaLocalDate(data.dataValidade)
+        qtd.set(Utils.quantidadeTratada(data.getQuantidade()));
+        observacao.set(data.getObservacao());
+        tipoPagamentoSelecionado.set(data.getTipoPagamento());
+        pcVenda.set(Utils.deRealParaCentavos(data.getPrecoUnitario()));
+        dataValidade.set(data.getDataValidade() != null
+                ? DateUtils.millisParaLocalDate(data.getDataValidade())
                 : null);
     }
 
-    void reloadProdutos(){
+    void reloadProdutos() {
         try {
-            var produtoList = produtoRepository.listar();
-            UI.runOnUi(()->  produtoModelListState.set(produtoList));
+            var produtoList = produtoService.listar();
+            UI.runOnUi(() -> produtoModelListState.set(produtoList));
         } catch (SQLException e) {
             throw new RuntimeException(e);
         }
@@ -168,23 +155,23 @@ public class VendaMercadoriaScreenViewModel extends ViewModelScreenContract {
     void fetchData() {
         Async.Run(() -> {
             try {
-                var clienteList = clienteRepository.listar();
-                var vendaList = vendaRepository.listar();
-                var produtoList = produtoRepository.listar();
+                var clienteList = clienteService.listar();
+                var vendaList = vendaService.listar();
+                var produtoList = produtoService.listar();
 
                 UI.runOnUi(() -> {
                     produtoModelListState.set(produtoList);
                     clientes.addAll(clienteList);
                     clienteList.stream()
-                            .filter(f -> f.id == 1L)
+                            .filter(f -> f.getId() == 1)
                             .findFirst()
                             .ifPresent(clienteSelected::set);
 
                     for (var venda : vendaList) {
-                        venda.cliente = clienteList.stream()
-                                .filter(it -> it.id.equals(venda.clienteId))
+                        venda.setCliente(clienteList.stream()
+                                .filter(it -> it.getId().equals(venda.getClienteId()))
                                 .findFirst()
-                                .orElse(null);
+                                .orElse(null));
                     }
                     vendas.addAll(vendaList);
                 });
@@ -203,39 +190,33 @@ public class VendaMercadoriaScreenViewModel extends ViewModelScreenContract {
             return;
         }
 
-        var dto = new VendaDto(
-                produtoEncontrado.get().codigoBarras,
-                clienteSelected.get().id,
-                new BigDecimal(qtd.get()),
-                Utils.deCentavosParaReal(pcVenda.get()),
-                Utils.deCentavosParaReal(descontoEmDinheiro.get()),
-                tipoPagamentoSelecionado.get(),
-                observacao.get(),
-                new BigDecimal(totais.totalLiquido.get()),
-                dataValidade.isNull() ? null : DateUtils.localDateParaMillis(dataValidade.get())
-        );
-
-        vendaService.deveAtualizarEstoque = opcaoEstoqueSelected.get().equalsIgnoreCase("Sim");
-
         Async.Run(() -> {
             if (modoEdicao.get()) {
                 final var selecionado = vendaSelected.get();
                 if (selecionado == null) return;
 
-                var modelAtualizada = new VendaModel().fromIdAndDto(selecionado.id, dto);
-                vendaService.atualizarOrThrow((VendaModel) modelAtualizada,
-                        msg -> UI.runOnUi(() -> Components.ShowAlertError("Erro ao atualizar: " + msg)));
+                fillModelFromForm(selecionado, false);
+                try {
+                    vendaService.atualizar(selecionado);
+                } catch (SQLException e) {
+                    UI.runOnUi(() -> Components.ShowAlertError("Erro ao atualizar: " + e.getMessage()));
+                    return;
+                }
 
-                UI.runOnUi(()->{
-                    vendas.updateIf(it -> it.id.equals(selecionado.id), it -> (VendaModel) modelAtualizada);
+                UI.runOnUi(() -> {
+                    vendas.updateIf(it -> it.getId().equals(selecionado.getId()), it -> selecionado);
                     Components.ShowPopup(ctx, "Venda atualizada com sucesso!");
                     reloadProdutos();
                     clearForm();
                 });
             } else {
-                VendaModel venda = null;
+                var model = new VendaModel();
+                fillModelFromForm(model, true);
+                boolean atualizarEstoque = opcaoEstoqueSelected.get().equalsIgnoreCase("Sim");
+
+                VendaModel salvo;
                 try {
-                    venda = vendaService.salvar(dto);
+                    salvo = vendaService.salvar(model, atualizarEstoque);
                 } catch (SQLException e) {
                     UI.runOnUi(() -> Components.ShowAlertError("Erro ao salvar venda: " + e.getMessage()));
                     return;
@@ -243,15 +224,14 @@ public class VendaMercadoriaScreenViewModel extends ViewModelScreenContract {
 
                 if ("A PRAZO".equals(tipoPagamentoSelecionado.get()) && !parcelas.get().isEmpty()) {
                     try {
-                        var contasService = new ContasAReceberService(vendaRepository, clienteRepository);
-                        contasService.gerarContasDeVenda(venda, parcelas.get());
+                        contaService.gerarContasDeVenda(salvo.getId(), salvo.getClienteId(), parcelas.get());
                     } catch (SQLException e) {
                         UI.runOnUi(() -> Components.ShowAlertError("Erro ao gerar contas: " + e.getMessage()));
                         return;
                     }
                 }
 
-                VendaModel finalVenda = venda;
+                VendaModel finalVenda = salvo;
                 UI.runOnUi(() -> {
                     vendas.add(finalVenda);
                     Components.ShowPopup(ctx, "Venda salva com sucesso!");
@@ -271,13 +251,13 @@ public class VendaMercadoriaScreenViewModel extends ViewModelScreenContract {
 
         Async.Run(() -> {
             try {
-                Long vendaId = data.id;
-                new ContasAReceberRepository().excluirPorVendaId(vendaId);
-                vendaRepository.excluirById(vendaId);
-                devolverEstoque(data.produtoCod, data.quantidade);
+                Integer vendaId = data.getId();
+                contaService.excluirPorVendaId(vendaId);
+                vendaService.excluir(vendaId, opcaoEstoqueSelected.get().equals("Sim"));
+                reloadProdutos();
 
                 UI.runOnUi(() -> {
-                    vendas.removeIf(it -> it.id.equals(vendaId));
+                    vendas.removeIf(it -> it.getId().equals(vendaId));
                     Components.ShowPopup(ctx, "Venda e contas vinculadas excluídas!");
                 });
             } catch (SQLException e) {
@@ -298,23 +278,29 @@ public class VendaMercadoriaScreenViewModel extends ViewModelScreenContract {
         tipoPagamentoSelecionado.set(Data.tiposPagamentoList.get(1));
         pcVenda.set("0");
         dataValidade.set(null);
-        if (!clientes.isEmpty()) clienteSelected.set(clientes.get(0));
+        if (!clientes.get().isEmpty()) {
+            clienteSelected.set(clientes.get().getFirst());
+        }
         opcaoEstoqueSelected.set("Não");
         estoqueAnterior.set("0");
         estoqueAtual.set("0");
     }
 
-    private void devolverEstoque(String codigoBarras, BigDecimal quantidade) {
-        if (!"Sim".equals(opcaoEstoqueSelected.get())) return;
-
-        Async.Run(() -> {
-            try {
-                produtoRepository.atualizarEstoque(codigoBarras, quantidade);
-                reloadProdutos();
-            } catch (SQLException e) {
-                UI.runOnUi(() -> Components.ShowAlertError("Erro ao devolver estoque: " + e.getMessage()));
-            }
-        });
+    private void fillModelFromForm(VendaModel model, boolean isNew) {
+        model.setProdutoCod(produtoEncontrado.get().getCodigoBarras());
+        model.setClienteId(clienteSelected.get() != null ? clienteSelected.get().getId() : null);
+        model.setQuantidade(new BigDecimal(qtd.get()));
+        model.setPrecoUnitario(Utils.deCentavosParaReal(pcVenda.get()));
+        model.setDesconto(Utils.deCentavosParaReal(descontoEmDinheiro.get()));
+        model.setTipoPagamento(tipoPagamentoSelecionado.get());
+        model.setObservacao(observacao.get());
+        model.setTotalLiquido(new BigDecimal(totais.totalLiquido.get()));
+        model.setDataValidade(dataValidade.get() != null ? DateUtils.localDateParaMillis(dataValidade.get()) : null);
+        model.setDataVenda(DateUtils.localDateParaMillis(dataVenda.get()));
+        model.setNumeroNota(numeroNota.get());
+        if (isNew) {
+            model.setTotalLiquido(new BigDecimal(totais.totalLiquido.get()));
+        }
     }
 
     private void atualizarEstoqueVisual() {
@@ -324,8 +310,8 @@ public class VendaMercadoriaScreenViewModel extends ViewModelScreenContract {
             return;
         }
 
-        BigDecimal estoqueBase = produtoEncontrado.get().estoque != null
-                ? produtoEncontrado.get().estoque
+        var estoqueBase = produtoEncontrado.get().getEstoque() != null
+                ? produtoEncontrado.get().getEstoque()
                 : BigDecimal.ZERO;
 
         estoqueAnterior.set(estoqueBase.toString());
